# qrs

./: 语音助手串口通信.hd
jiaju_demo/: BUILD.gn  hal_iot_gpio_ex.c  hw_cloud_entry.c  main_wifi.c  uart.c  wifi_entry.c
jiaju_demo/aht20/: aht20.c  aht20.h
