# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# 修改copy目标名称，避免与其他模块冲突
copy("libiot_link_demo") {
  sources = [ "./third_party/libs/libiot_link.a" ]
  outputs = [ "//out/hispark_pegasus/wifiiot_hispark_pegasus/libs/libiot_link_demo.a" ]
}

static_library("hw_cloud_demo") {
    sources = [
        "main_wifi.c",
        "wifi_entry.c",
        "hw_cloud_entry.c",
        "aht20/aht20.c",
        "hal_iot_gpio_ex.c",
        "uart.c",
    ]
    deps = [ ":libiot_link_demo" ]
    include_dirs = [
        "aht20",

        # for 3.1.4-Release
        "//utils/native/lite/include",
        "//device/soc/hisilicon/hi3861v100/hi3861_adapter/kal/cmsis",
        "//base/iot_hardware/peripheral/interfaces/kits",

        # for 3.2-Release
        "//commonlibrary/utils_lite/include",
        "//base/iothardware/peripheral/interfaces/inner_api",
        "//kernel/liteos_m/kal",

        "//third_party/cJSON/",
        "//foundation/communication/wifi_lite/interfaces/wifiservice",

        "./third_party/iot_link/oc_mqtt/oc_mqtt_al",
        "./third_party/iot_link/oc_mqtt/oc_mqtt_profile_v5",
        "./third_party/iot_link/inc",

        "//src/device/hisilicon/hispark_pegasus/sdk_liteos/include",

        "//device/soc/hisilicon/hi3861v100/sdk_liteos/include",
    ]
}
